[B] feat: dev 환경 분리 기초 작업